--- a/browserExtensions.html
+++ b/browserExtensions.html
@@ -32,10 +32,12 @@
     <br>
     <div class="frame">
         <h2> How to Install </h2>
-        <a href="#"
-            onclick="window.open('extensionDemoVideo.html','_blank','width=800,height=533,left=100,top=100')">Watch
-            Demo
-            Video</a>
+        <a href="" onclick="window.open('extensionDemoVideo.html','_blank','width=800,height=533,left=100,top=100')">
+            Watch Demo Video,</a>
+        <a href=""
+            onclick="window.open('browserExtensionInstallGuide.html','_blank','width=654,height=748,left=100,top=20')">
+            Read Guide
+        </a>
 
     </div>
     <br>
