--- a/extensionDemoVideo.html
+++ b/extensionDemoVideo.html
@@ -18,7 +18,7 @@
 <body>
     <iframe width="100%" height="100%"
         src="https://www.youtube-nocookie.com/embed/bECJ4IlSObQ?si=vKy4TZjrvr5SCLkj&rel=0&autoplay=1"
-        title="YouTube video player" frameborder="0"
+        title="YouTube video player" frameborder="0" sandbox="allow-scripts allow-same-origin"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
