--- a/index.html
+++ b/index.html
@@ -72,13 +72,9 @@
             View my projects:
             <a href="https://codeprojects.org/projects/weblab/DRPF0isS6kS_02osFyloCZw-NEOyFZ39zeKYcXfEZ2E/appData.html"
                 target="blank">Code.org projects,</a>
-            <!--
-        The Glitch was already closed
-        <a href="glitchProjects.html">Glitch projects</a>
-        -->
-            <a href="https://richardliucode.github.io/richardcode/GitHub/">GitHub projects</a>
-            <a href="https://richardliucode.onrender.com" target="_blank">Render projects</a>
-            <a href="https://richardliucode.github.io/richardcode/browserExtensions.html">Browser extensions</a>
+            <a href="https://richardliucode.github.io/richardcode/GitHub/">GitHub projects,</a>
+            <a href="https://richardliucode.onrender.com" target="_blank">Render projects,</a>
+            <a href="https://richardliucode.github.io/richardcode/browserExtensions.html">Browser extensions,</a>
         </p>
     </div>
     <br />
