--- a/extensionDemoVideo.html
+++ b/extensionDemoVideo.html
@@ -13,6 +13,9 @@
             scrollbar-width: none;
         }
     </style>
+    <title>How to install an unpacked browser extension</title>
+    <link rel="icon" href="logo.png">
+    <link rel="apple-touch-icon" href="logo180px.png">
 </head>
 
 <body>
