--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 target="blank">Code.org projects,</a>
             <a href="https://richardliucode.github.io/richardcode/GitHub/">GitHub projects,</a>
             <a href="https://richardliucode.onrender.com" target="_blank">Render projects,</a>
-            <a href="https://richardliucode.github.io/richardcode/browserExtensions.html">Browser extensions,</a>
+            <a href="https://richardliucode.github.io/richardcode/browserExtensions.html">Browser extensions</a>
         </p>
     </div>
     <br />
