update footer.js and change browserExtensions.html's footer

--- a/browserExtensions.html
+++ b/browserExtensions.html
@@ -15,7 +15,6 @@
       ">
     <meta name="author" content="Richard Liu">
     <meta charset="UTF-8">
-    <script async src="https://richardliucode.github.io/richardcode/RichardJS/footer.js"></script>
 </head>
 
 <body>
@@ -63,6 +62,11 @@
     <br>
     <br>
     <br>
+    <footer class="bottombar">
+        <p style="margin-left:15px;">© 2025 Richard Liu</p>
+        <p>RichardCode</p>
+        <p style="margin-right:18px;">Host by GitHub</p>
+    </footer>
 </body>
 
 </html>
