update browserextension.html add a extension

--- a/browserExtensions.html
+++ b/browserExtensions.html
@@ -54,6 +54,12 @@
     </div>
     <br>
     <div class="frame">
+        <h2>Clock Browser Extension </h2>
+        <a href="https://github.com/RichardLiuCode/clockBrowserExtension" target="_blank">View GitHub
+            repository</a>
+    </div>
+    <br>
+    <div class="frame">
         <h2> Clock and Calendar Bottom Right Widget Browser Extension </h2>
         <a href="https://github.com/RichardLiuCode/clockAndCalendarBottomBarExtension" target="_blank">View GitHub
             repository</a>
