--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div id="sideBar" class="side-bar">
+    <div id="sideBar" class="side-bar" style="display:none">
         <div id="sidebarHigherButtonContainer" style="height: 40px;margin-top:15px;"></div>
         <button id="viewCode">View source code</button>
         <br /><br />
