upload browser extension

--- a/browserExtensions.html
+++ b/browserExtensions.html
@@ -65,6 +65,13 @@
             repository</a>
     </div>
     <br>
+    <div class="frame">
+        <h2> Code.org App Lab Darkmode and additional Features Browser Extension</h2>
+        <a href="https://github.com/RichardLiuCode/code.orgAppLabDarkModeBrowserExtension" target="_blank">View
+            GitHub
+            repository</a>
+    </div>
+    <br>
     <br>
     <br>
     <br>
