--- a/GitHub/index.html
+++ b/GitHub/index.html
@@ -16,7 +16,7 @@
     </div>
     <div style="top:0;position:fixed;width:100vw;height:40px;background-color:white">
         <button class="topBtn"
-            onclick="window.location.href=('https://RichardLiuCode.github.io/richardcode')">Home</button>
+            onclick="window.location.href=('../index.html')">Home</button>
         <button class="topBtn" id="shareSite">Share</button>
     </div>
     <div style="width:100vw;height:40px;">
