--- a/feedback.html
+++ b/feedback.html
@@ -13,11 +13,14 @@
 </head>
 
 <body>
+  <div class="bar">
+    <a href="index.html"> <button>Home</button></a>
+  </div>
+  <br>
+  <br>
   <br>
   <br>
   <div class="frame">
-    <a href="index.html"> <button>Home</button></a>
-
     <h1>Send Feedback</h1>
   </div>
   <br>
