--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="https://codeprojects.org/projects/weblab/DRPF0isS6kS_02osFyloCZw-NEOyFZ39zeKYcXfEZ2E/appData.html"
                 target="blank">Code.org projects,</a>
             <a href="GitHub/">GitHub projects,</a>
-            <a href="https://richardliucode.onrender.com" target="_blank">Render projects,</a>
+            <a href="renderpreview.html" target="_blank">Render projects,</a>
             <a href="browserExtensions.html">Browser extensions</a>
         </p>
     </div>
