--- a/indexs/sidebarindex.html
+++ b/indexs/sidebarindex.html
@@ -34,7 +34,7 @@ View my projects
   </li>
 
   <li>
-    <a href="../renderpreview.html">Render Projects,</a>
+    <a href="../renderpreview.html" target="_parent">Render Projects,</a>
   </li>
 
   <li>
