--- a/browserExtensionInstallGuide.html
+++ b/browserExtensionInstallGuide.html
@@ -56,7 +56,10 @@
             <li>
                 <h2>Download the extensions</h2>
                 <ul>
-                    <li>On the top of the repoistiories, click the green <strong>Code</strong> button and then select
+                    <li>When you open a github repoistiories of a browser extension, on the top of the repoistiories,
+                        click the
+                        green
+                        <strong>Code</strong> button and then select
                         <strong>Download as ZIP.</strong>
                     </li>
                     <li>After you downloaded the zip files, extract the file on your computer.</li>
@@ -99,6 +102,11 @@
             </li>
         </ol>
         <div class="popupHint" id="popupHint">
+            <br>
+            <img src="images/EdgeUnpackedExtensionWarningPopup.png" alt="Edge Unpacked Extension Warning Popup"
+                style="width:100%;height:200px;object-fit: contain;">
+            <br>
+            <br>
             For sercurity reason, browser will remind you with a popup message that said you turned on
             the developer mode
             because you installed a third party extensions, if you make sure the extensions is from trused sources or
