--- a/browserExtensionInstallGuide.html
+++ b/browserExtensionInstallGuide.html
@@ -103,8 +103,8 @@
         </ol>
         <div class="popupHint" id="popupHint">
             <br>
-            <img src="images/EdgeUnpackedExtensionWarningPopup.png" alt="Edge Unpacked Extension Warning Popup"
-                style="width:100%;height:200px;object-fit: contain;">
+            <img src="images/EdgeUnpackedExtensionWarningPopup.png"
+                alt="Edge Unpacked Extension Warning Popup" style="width:100%;height:200px;object-fit: contain;">
             <br>
             <br>
             For sercurity reason, browser will remind you with a popup message that said you turned on
@@ -130,7 +130,6 @@
             footer.src = "https://richardliucode.github.io/richardcode/RichardJS/footer.js";
             document.body.appendChild(footer);
             document.getElementById("moreLinebreak").style.display = "revert"
-
         }
     </script>
 </body>
