--- a/browserExtensions.html
+++ b/browserExtensions.html
@@ -72,6 +72,13 @@
             repository</a>
     </div>
     <br>
+    <div class="frame">
+        <h2> Youtube Search Search Suggestion Blocker Browser Extension</h2>
+        <a href="https://github.com/RichardLiuCode/YouTubeSearchSuggestionBlockerBrowserExtension" target="_blank">View
+            GitHub
+            repository</a>
+    </div>
+    <br>
     <br>
     <br>
     <br>
