--- a/indexs/sidebarindex.html
+++ b/indexs/sidebarindex.html
@@ -24,7 +24,7 @@ View my projects
 <ol>
 
   <li>
-    <a href="https://codeprojects.org/projects/weblab/DRPF0isS6kS_02osFyloCZw-NEOyFZ39zeKYcXfEZ2E/appData.html"
+    <a href="https://richardliucode.github.io/code.orgprojects/appData.html"
       target="blank">Code.org projects,</a>
   </li>
 
@@ -83,7 +83,7 @@ Feedback:
     {
         "keywords": ["projects", "code.org", "app lab", "applab", "weblab", "web lab"],
         "title": "Code.org",
-        "url": "https://codeprojects.org/projects/weblab/DRPF0isS6kS_02osFyloCZw-NEOyFZ39zeKYcXfEZ2E/appData.html"
+        "url": "https://richardliucode.github.io/code.orgprojects/appData.html"
     },
     {
         "keywords": ["Projects", "github"],
