--- a/code.orgProjects.html
+++ b/code.orgProjects.html
@@ -7,6 +7,7 @@
     <style>
         #ajhvniawesdfrsjvnm09ewrgjn88k {
             width: 100vw;
+            height: 100vh;
             z-index: 2;
             border: none;
             position: fixed;
@@ -17,16 +18,12 @@
 </head>
 
 <body>
-    <div class="bar">
+    <div class="bar" style="z-index:4">
         <button onclick="window.location.href='index.html'">Home</button>
     </div>
     <iframe allow="allow-popups clipboard-write" id="ajhvniawesdfrsjvnm09ewrgjn88k"
         src="https://richardliucode.github.io/code.orgprojects/appData.html"></iframe>
-    <script>
-        setInterval(function () {
-            document.getElementById("ajhvniawesdfrsjvnm09ewrgjn88k").style.height = window.innerHeight - 40 + "px";
-        }, 200)
-    </script>
+
 </body>
 
 </html>
