--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <iframe src="indexs/sidebarindex.html" id="345side" style="border-width: 0px; width: 250px; height: 1000px">
             Error
         </iframe>
-        
+
     </div>
     <div class="bar">
         <button id="showSideBar"
@@ -57,8 +57,7 @@
 
         <p>
             View my projects:
-            <a href="https://codeprojects.org/projects/weblab/DRPF0isS6kS_02osFyloCZw-NEOyFZ39zeKYcXfEZ2E/appData.html"
-                target="blank">Code.org projects,</a>
+            <a href="code.orgProjects.html" target="blank">Code.org projects,</a>
             <a href="GitHub/">GitHub projects,</a>
             <a href="renderpreview.html" target="_blank">Render projects,</a>
             <a href="browserExtensions.html">Browser extensions</a>
