--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             View my projects:
             <a href="code.orgProjects.html" target="blank">Code.org projects,</a>
             <a href="GitHub/">GitHub projects,</a>
+            <a href="https://codepen.io/richardliucode" target="blank">CodePen projects,</a>
             <a href="renderpreview.html" target="_blank">Render projects,</a>
             <a href="browserExtensions.html">Browser extensions</a>
         </p>
