--- a/indexs/sidebarindex.html
+++ b/indexs/sidebarindex.html
@@ -24,13 +24,16 @@ View my projects
 <ol>
 
   <li>
-    <a href="https://richardliucode.github.io/code.orgprojects/appData.html"
-      target="blank">Code.org projects,</a>
+    <a href="https://richardliucode.github.io/code.orgprojects/appData.html" target="blank">Code.org projects,</a>
   </li>
 
 
   <li>
     <a href="https://richardliucode.github.io/richardcode/GitHub/" target="_blank">GitHub projects</a>
+  </li>
+
+  <li>
+    <a href="https://codepen.io/richardliucode" target="_blank">Codepen projects</a>
   </li>
 
   <li>
@@ -89,6 +92,11 @@ Feedback:
         "keywords": ["Projects", "github"],
         "title": "GitHub",
         "url": "https://richardliucode.github.io/richardcode/GitHub"
+    },
+    {
+        "keywords": ["Projects", "codepen"],
+        "title": "CodePen",
+        "url": "https://codepen.io/richardliucode"
     },
     {
         "keywords": ["computer science", "google classroom"],
