--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a href="https://codepen.io/richardliucode" target="blank">CodePen projects,</a>
             <a href="renderpreview.html" target="_blank">Render projects,</a>
             <a href="browserExtensions.html">Browser extensions</a>
+            <a href="jspackages.html">JavaScript Packages</a>
         </p>
     </div>
     <br />
