--- a/indexs/sidebarindex.html
+++ b/indexs/sidebarindex.html
@@ -44,6 +44,9 @@ View my projects
     <a href="https://richardliucode.github.io/richardcode/browserExtensions.html" target="_blank">Browser Extensions</a>
   </li>
 
+  <li>
+    <a href="jspackages.html">JavaScript Packages</a>
+  </li>
 
 </ol>
 <hr>
@@ -92,6 +95,11 @@ Feedback:
         "keywords": ["Projects", "github"],
         "title": "GitHub",
         "url": "https://richardliucode.github.io/richardcode/GitHub"
+    },
+    {
+        "keywords": ["Projects", "npm","packages","js","library","lib"],
+        "title": "JavaScript Packages",
+        "url": "jspackages.html"
     },
     {
         "keywords": ["Projects", "codepen"],
