--- a/jspackages.html
+++ b/jspackages.html
@@ -26,6 +26,10 @@
         <a href="https://www.npmjs.com/package/richard-factorialjs">Open in npm</a>
     </div>
     <br>
+    <div class="frame">
+        <h1>AppLabJS</h1>
+        <a href="https://www.npmjs.com/package/applabjs">Open in npm</a>
+    </div>
 </body>
 
 </html>
